JEN-273:clean up;